--- a/examples/UCL.ipynb
+++ b/examples/UCL.ipynb
@@ -302,7 +302,7 @@
     }
    ],
    "source": [
-    "ucl = pd.read_csv(\"/Users/dcoder/Desktop/school/csc630/UCLQuarterFinals.csv\")\n",
+    "ucl = pd.read_csv(\"/../UCLQuarterFinals.csv\")\n",
     "ucl.sample(8)"
    ]
   },
