--- a/examples/News_pictograms.ipynb
+++ b/examples/News_pictograms.ipynb
@@ -13,7 +13,7 @@
     "---\n",
     "\n",
     "\n",
-    "This notebook contains the code used to create a waffle chart of news by categories. Data taken from [Kaggle](https://www.kaggle.com/johnharshith/uefa-champions-league-quarter-finals-since-1980)."
+    "This notebook contains the code used to create a waffle chart of news by categories. Data taken from [Kaggle](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.sort_values.html)."
    ]
   },
   {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4c767af4",
+   "id": "c0e262b4",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4f74e7b4",
+   "id": "aa5e61bd",
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "db08ff3b",
+   "id": "07e40dbc",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "66120be1",
+   "id": "6c78461e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b8f54c58",
+   "id": "dab8aedd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "07932d1d",
+   "id": "18908851",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "49eb0059",
+   "id": "8a00977d",
    "metadata": {},
    "outputs": [
     {
